@@ -278,6 +278,15 @@ Default is nil "
   :type 'string
   :group 'python-mode)
 
+
+(defcustom py-pylint-offer-current-p t
+  "If current buffers file should be offered for check.
+
+Default is non-nil. If nil, `py-pylint-run' offers filename from history "
+
+  :type 'boolean
+  :group 'python-mode)
+
 (defcustom py-hide-show-minor-mode-p nil
   "If hide-show minor-mode should be on, default is nil. "
 
@@ -4134,54 +4143,58 @@ but the region is shiftet that way.
 If `py-tab-indents-region-p' is `t' and first TAB doesn't shift
 --as indent is at outmost reasonable--, indent-region is called. "
   (interactive "P")
-  ;; TAB-leaves-point-in-the-wrong-lp-1178453-test
-  ;; (save-excursion
-  (let ((orig (copy-marker (point)))
-        (region (use-region-p))
-        beg end)
-    (and region (setq beg (region-beginning))
-         (setq end (region-end)))
-    (let ((cui (current-indentation))
-          (col (current-column))
-          (this-indent-offset (cond ((and py-smart-indentation (not (eq this-command last-command)))
-                                     (py-guess-indent-offset))
-                                    ((and py-smart-indentation (eq this-command last-command) py-already-guessed-indent-offset)
-                                     py-already-guessed-indent-offset)
-                                    (t (default-value 'py-indent-offset))))
-          (need (if (and (eq this-command last-command) py-already-guessed-indent-offset)
-                    (if region
-                        (save-excursion
-                          ;; if previous command was an indent
-                          ;; already, position reached might
-                          ;; produce false guesses
-                          (goto-char beg) (py-compute-indentation beg nil nil nil nil nil py-already-guessed-indent-offset))
-                      (py-compute-indentation beg nil nil nil nil nil py-already-guessed-indent-offset))
-                  (if region
-                      (save-excursion
-                        (goto-char beg)
-                        (save-excursion (goto-char beg) (py-compute-indentation)))
-                    (py-compute-indentation)))))
-      (unless (eq this-command last-command)
-        (setq py-already-guessed-indent-offset this-indent-offset))
-      (cond ((eq 4 (prefix-numeric-value arg))
-             (beginning-of-line)
-             (delete-horizontal-space)
-             (indent-to (+ need py-indent-offset)))
-            ((not (eq 1 (prefix-numeric-value arg)))
-             (py-smart-indentation-off)
-             (py-indent-line-intern need cui this-indent-offset beg end region))
-            (t (py-indent-line-intern need cui this-indent-offset beg end region)))
-      (when (and (interactive-p) py-verbose-p)(message "%s" (current-indentation)))
-      (current-indentation))
-    (goto-char orig)
-    (if region
-        (progn
-          (or py-tab-shifts-region-p
-              py-tab-indents-region-p)
-          (eq (point) end)
-          (not (eq (point) orig))
-          (exchange-point-and-mark))
-      (and (< (current-column) (current-indentation))(back-to-indentation)))))
+  (if (interactive-p)
+      ;; TAB-leaves-point-in-the-wrong-lp-1178453-test
+      ;; (save-excursion
+      (let ((orig (copy-marker (point)))
+	    (region (use-region-p))
+	    beg end)
+	(and region (setq beg (region-beginning))
+	     (setq end (region-end)))
+	(let ((cui (current-indentation))
+	      (col (current-column))
+	      (this-indent-offset (cond ((and py-smart-indentation (not (eq this-command last-command)))
+					 (py-guess-indent-offset))
+					((and py-smart-indentation (eq this-command last-command) py-already-guessed-indent-offset)
+					 py-already-guessed-indent-offset)
+					(t (default-value 'py-indent-offset))))
+	      (need (if (and (eq this-command last-command) py-already-guessed-indent-offset)
+			(if region
+			    (save-excursion
+			      ;; if previous command was an indent
+			      ;; already, position reached might
+			      ;; produce false guesses
+			      (goto-char beg) (py-compute-indentation beg nil nil nil nil nil py-already-guessed-indent-offset))
+			  (py-compute-indentation beg nil nil nil nil nil py-already-guessed-indent-offset))
+		      (if region
+			  (save-excursion
+			    (goto-char beg)
+			    (save-excursion (goto-char beg) (py-compute-indentation)))
+			(py-compute-indentation)))))
+	  (unless (eq this-command last-command)
+	    (setq py-already-guessed-indent-offset this-indent-offset))
+	  (cond ((eq 4 (prefix-numeric-value arg))
+		 (beginning-of-line)
+		 (delete-horizontal-space)
+		 (indent-to (+ need py-indent-offset)))
+		((not (eq 1 (prefix-numeric-value arg)))
+		 (py-smart-indentation-off)
+		 (py-indent-line-intern need cui this-indent-offset beg end region))
+		(t (py-indent-line-intern need cui this-indent-offset beg end region)))
+	  (when (and (interactive-p) py-verbose-p)(message "%s" (current-indentation)))
+	  (current-indentation))
+	(goto-char orig)
+	(if region
+	    (progn
+	      (or py-tab-shifts-region-p
+		  py-tab-indents-region-p)
+	      (eq (point) end)
+	      (not (eq (point) orig))
+	      (exchange-point-and-mark))
+	  (and (< (current-column) (current-indentation))(back-to-indentation))))
+    (beginning-of-line)
+    (delete-horizontal-space)
+    (indent-to (py-compute-indentation))))
 
 (defun py-newline-and-indent ()
   "Add a newline and indent to outmost reasonable indent.
@@ -16227,20 +16240,27 @@ Home-page: http://www.logilab.org/project/pylint "
                (format "%s %s %s" py-pylint-command
                        (mapconcat 'identity py-pylint-command-args " ")
                        (buffer-file-name))
-             (format "%s %s" py-pylint-command
-                     (mapconcat 'identity py-pylint-command-args " "))))
+             (format "%s %s %s" py-pylint-command
+                     (mapconcat 'identity py-pylint-command-args " ")
+                     (buffer-name (current-buffer)))))
          (last (and py-pylint-history (car py-pylint-history)))
          erg)
 
      (list
       (if (fboundp 'read-shell-command)
           (read-shell-command "Run pylint like this: "
-                              (or last default)
+                              (if py-pylint-offer-current-p
+                                  (or default last)
+                                (or last default))
                               'py-pylint-history)
         (read-string "Run pylint like this: "
-                     (or last default)
+                     (if py-pylint-offer-current-p
+                         (or default last)
+                       (or last default))
                      'py-pylint-history)))))
   (save-some-buffers (not py-ask-about-save))
+  (unless (file-readable-p buffer-file-name)
+    (message "Warning: %s" "pylint needs a file"))
   (shell-command (concat command " " buffer-file-name)))
 
 (defalias 'pylint-help 'py-pylint-help)
